--- a/type_script/proj/index.html
+++ b/type_script/proj/index.html
@@ -8,6 +8,6 @@
     <h1>TypeScript HTML App</h1>
  
     <div id="content"></div>
-    <script src="app.js"></script>
+    <script src="./dist/main.js"></script>
 </body>
 </html>
